# sql_extractor

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  allurectl.yaml  docker-compose.yml  generate_swagger.py  main.py  okved.csv  pyproject.toml  requirements.txt  run_examples.py  run_tests.py  script.sql  send_kafka_message.py  test_kafka_integration.py  test_okato_rag.py  test_oktmo_rag.py  test_okved_rag.py
init-scripts/: 01-init.sql  01_setup_pgvector.sql  migration.sql
src/: cli.py  models.py
src/agent/: agent.py  analyze_query.py  enriched_query.py  sql_generator.py
src/api/: main.py  models.py  routes.py
src/config/: settings.py
src/data/: init_rag.py  okato_rag.py  oktmo_rag.py  okved_rag.py
src/db/: base_db_client.py  db_response_cache.py  db_schema_tool.py  report_client.py
src/embeddings/: __init__.py  base.py  factory.py  gigachat_embeddings.py  huggingface_embeddings.py
src/kafka/: __init__.py  base_consumer.py  base_producer.py  consumer.py  main.py  producer.py  result_producer.py
src/services/: organization_processor.py  request_processor.py  task_subtype_processor.py
src/tools/: __init__.py  db_schema_tool_wrapper.py  okato_tool.py  oktmo_tool.py  okved_tool.py
src/utils/: errors.py  logging.py
src/vectorstore/: __init__.py  pgvector_store.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_cases.yaml  test_db_schema_tool.py  test_errors.py  test_kafka.py  test_models.py  test_postgres_integration.py  test_sql_generator.py
