[project]
name = "extract-parameter-agent"
version = "0.1.0"
description = "Production-ready AI agent application using Gigachat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gigachat",
    "pydantic",
    "python-dotenv",
    "loguru",
    "pg8000",
    "aiokafka",
    "pytest",
    "httpx",
    "allure-pytest",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "--alluredir=allure-results"
allure_report_dir = "allure-report"
